add Delete endpoint
